--- a/index.html
+++ b/index.html
@@ -8,28 +8,47 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Buds Marine</h1>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Inventory</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
+        <nav class="navbar">
+            <div class="logo">Buds Marine</div>
+            <div class="nav-links">
+                <a href="#">Home</a>
+                <a href="#">Inventory</a>
+                <a href="#">Services</a>
+                <a href="#">Digital Catalog</a>
+                <a href="#">Contact Us</a>
+            </div>
         </nav>
     </header>
     <section class="hero">
-        <h2>Ohio's Largest Pontoon Selection</h2>
-        <button>Browse New Inventory</button>
-        <button>View Pre-Owned Boats</button>
+        <div class="hero-text">
+            <h1>Experience Ohio’s Largest Pontoon Selection</h1>
+            <p>Find your perfect boat with Bud’s Marine</p>
+            <button>Browse New Inventory</button>
+            <button>View Pre-Owned Boats</button>
+        </div>
     </section>
     <section class="inventory">
-        <h3>Featured Inventory</h3>
-        <div class="boat-card">2023 Qwest E-Class 822 RLS LTZ</div>
-        <div class="boat-card">2023 Bennington 25QXFBWA</div>
-        <div class="boat-card">2022 Sun Tracker Party Barge</div>
+        <h2>Featured Inventory</h2>
+        <div class="inventory-items">
+            <div class="item"><img src="https://via.placeholder.com/200x100" /><p>$39,995</p></div>
+            <div class="item"><img src="https://via.placeholder.com/200x100" /><p>$27,900</p></div>
+            <div class="item"><img src="https://via.placeholder.com/200x100" /><p>$44,279</p></div>
+        </div>
+    </section>
+    <section class="about">
+        <div class="about-us">
+            <h2>About Us</h2>
+            <p>Bud’s Marine has over 40 years of experience in the marine industry and is your trusted source for pontoon boats in Ohio.</p>
+        </div>
+        <div class="testimonials">
+            <h2>Testimonials</h2>
+            <blockquote>"Excellent dealership with a great selection and knowledgeable staff: Highly recommend!"</blockquote>
+        </div>
     </section>
     <footer>
         <p>6600 State Route 366, Huntsville, OH 43324</p>
         <p>937.686.5555</p>
+        <p>Mon–Fri: 9am–5pm | Sat–Sun: 9am–3pm</p>
     </footer>
 </body>
 </html>
